@@ -1446,7 +1446,7 @@ $wgCacheEpoch = '20030516000000';
  * to ensure that client-side caches don't keep obsolete copies of global
  * styles.
  */
-$wgStyleVersion = '195';
+$wgStyleVersion = '196';
 
 
 # Server-side caching:
