@@ -258,6 +258,7 @@ The following extensions are migrated into MediaWiki 1.14:
 * Image moving is now enabled for sysops by default
 * Make "Did you mean" search feature more noticeable
 * (bug 16720) Transcluded Special:NewPages processes "/username="
+* Added "Advanced search" link to the search form
 
 === Bug fixes in 1.14 ===
 
